testdata/parser/negative/14.txt
Parse error at 14.pdl:5:10: Illegal built-in occurrence
	int x = get(a);
	        ^
